--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     build:
       context: .
       dockerfile: frontend.Dockerfile
-    entrypoint: npm run start -- --proxy http://backend:8888
+    entrypoint: yarn start -- --proxy http://backend:8888
     links:
       - backend
     ports:
