--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,6 @@ env:
     - DATABASE_URL=postgres://postgres:@localhost/cargo_registry_test
     - TEST_DATABASE_URL=postgres://postgres:@localhost/cargo_registry_test
     - CARGO_INCREMENTAL=0
-    - PERCY_PARALLEL_TOTAL=2
     # Percy secrets are included here to enable Percy's GitHub integration
     # on community-submitted PRs
     - PERCY_TOKEN=0d8707a02b19aebbec79bb0bf302b8d2fa95edb33169cfe41b084289596670b1
@@ -72,7 +71,7 @@ matrix:
         - npm run lint:hbs
         - npm run lint:js
         - npm run lint:deps
-        - npm test
+        - percy exec -- npm test
     - rust: beta
       script:
         - cargo test
