--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@ember/render-modifiers": "1.0.2",
     "@glimmer/component": "1.0.1",
     "@glimmer/tracking": "1.0.1",
+    "@percy/ember": "2.1.3",
     "babel-eslint": "10.1.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "broccoli-asset-rev": "3.0.0",
@@ -82,7 +83,6 @@
     "ember-modifier": "1.0.4",
     "ember-moment": "8.0.0",
     "ember-page-title": "5.2.3",
-    "ember-percy": "1.6.0",
     "ember-prism": "0.8.0",
     "ember-promise-helpers": "1.0.9",
     "ember-qunit": "4.6.0",
