models: add account_lock_reason and account_lock_until to User

--- a/src/tasks/dump_db/dump-db.toml
+++ b/src/tasks/dump_db/dump-db.toml
@@ -173,6 +173,8 @@ gh_login = "public"
 name = "public"
 gh_avatar = "public"
 gh_id = "public"
+account_lock_reason = "private"
+account_lock_until = "private"
 [users.column_defaults]
 gh_access_token = "''"
 
