--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,7 +70,9 @@ license-exprs = "^1.4"
 log = "0.4"
 oauth2 = { version = "3.0.0", default-features = false, features = ["reqwest-010"] }
 parking_lot = "0.11"
+parse_link_header = "0.2.0"
 rand = "0.7"
+regex = "1.3.9"
 reqwest = { version = "0.10", features = ["blocking", "gzip", "json"] }
 scheduled-thread-pool = "0.2.0"
 semver = { version = "0.10", features = ["diesel", "serde"] }
