Move addons to specific jobs
The node_js containers hang for 5 minute when starting postgres 11,
which is not needed for those tests. The rust containers fail to
install chrome (because its deps are not installed by default there)
and it is not needed for those tests.

This also cleans up two validation warnings.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: rust
 dist: bionic
+os: linux
 
 branches:
   only:
@@ -36,14 +37,13 @@ before_script:
   - diesel database setup --locked-schema
 
 addons:
-  chrome: stable
   postgresql: "11"
   apt:
     packages:
       - postgresql-11
       - postgresql-client-11
 
-matrix:
+jobs:
   fast_finish: true
   allow_failures:
     - rust: nightly
@@ -60,6 +60,8 @@ matrix:
     - name: Frontend
       language: node_js
       node_js: 12
+      addons:
+        chrome: stable
       install:
         - npm ci
       before_script: skip
