--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,7 @@ matrix:
         - npm run lint:hbs
         - npm run lint:js
         - npm run lint:deps
-        - percy exec -- npm test
+        - percy exec -- npm run test-coverage
     - rust: beta
       script:
         - cargo test
