--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@glimmer/component": "1.0.2",
     "@glimmer/tracking": "1.0.2",
     "@percy/ember": "2.1.4",
+    "@zestia/ember-auto-focus": "^4.1.4",
     "babel-eslint": "10.1.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "broccoli-asset-rev": "3.0.0",
