--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,7 @@ jobs:
         run: echo "PERCY_PARALLEL_NONCE=`date +%s`" >> $GITHUB_ENV
 
       - name: Run percy exec
+        if: github.repository == 'rust-lang/crates.io'
         run: npx percy exec -- npm run test-coverage
 
   backend:
