--- a/package.json
+++ b/package.json
@@ -119,5 +119,8 @@
   "engines": {
     "node": "^14.9.0",
     "npm": "^6.10.2"
+  },
+  "resolutions": {
+    "ember-test-waiters": "^2.0.0"
   }
 }
