--- a/src/cargo-registry/Cargo.toml
+++ b/src/cargo-registry/Cargo.toml
@@ -26,7 +26,7 @@ rustdoc-args = [
 ammonia = "3.0.0"
 anyhow = "1.0"
 base64 = "0.13"
-cargo-registry-s3 = { path = "src/s3", version = "0.2.0" }
+cargo-registry-s3 = { path = "../cargo-registry-s3" }
 chrono = { version = "0.4.0", features = ["serde"] }
 civet = "0.12.0-alpha.4"
 comrak = { version = "0.8", default-features = false }
