Move on-call tools to dedicated subproject

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ description = "Backend of crates.io"
 edition = "2018"
 
 [workspace]
+members = [".", "src/on_call"]
 
 [profile.release]
 opt-level = 2
