--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,6 +91,7 @@ url = "2.1"
 conduit-test = "0.9.0-alpha.3"
 diesel_migrations = { version = "1.3.0", features = ["postgres"] }
 hyper-tls = "0.4"
+insta = { version = "1.1.0", features = ["redactions"] }
 lazy_static = "1.0"
 tokio = { version = "0.2", default-features = false, features = ["stream"]}
 tower-service = "0.3.0"
