Use `sentry` to log server panics

--- a/.env.sample
+++ b/.env.sample
@@ -56,3 +56,7 @@ export GH_CLIENT_SECRET=
 # export MAILGUN_SMTP_LOGIN=
 # export MAILGUN_SMTP_PASSWORD=
 # export MAILGUN_SMTP_SERVER=
+
+# Credentials for connecting to the Sentry error reporting service.
+# export SENTRY_DSN_API=
+export SENTRY_ENV_API=local
