--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,7 @@ regex = "1.3.9"
 reqwest = { version = "0.10", features = ["blocking", "gzip", "json"] }
 scheduled-thread-pool = "0.2.0"
 semver = { version = "0.10", features = ["diesel", "serde"] }
+sentry = "0.20.1"
 serde = { version = "1.0.0", features = ["derive"] }
 serde_json = "1.0.0"
 sha2 = "0.9"
