--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,7 +68,7 @@ jemallocator = { version = "0.3", features = ['unprefixed_malloc_on_supported_pl
 lettre = { version = "0.10.0-alpha.1", default-features = false, features = ["file-transport", "smtp-transport", "native-tls", "hostname", "builder"] }
 license-exprs = "^1.4"
 log = "0.4"
-oauth2 = { version = "3.0.0", default-features = false, features = ["reqwest-010"] }
+oauth2 = "4.0.0-alpha.2"
 parking_lot = "0.11"
 parse_link_header = "0.2.0"
 rand = "0.7"
