--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,6 +88,7 @@ toml = "0.5"
 url = "2.1"
 
 [dev-dependencies]
+claim = "0.4.0"
 conduit-test = "0.9.0-alpha.3"
 diesel_migrations = { version = "1.3.0", features = ["postgres"] }
 hyper-tls = "0.4"
