--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,3 +100,4 @@ tower-service = "0.3.0"
 diesel = { version = "1.3.0", features = ["postgres"] }
 diesel_migrations = { version = "1.3.0", features = ["postgres"] }
 dotenv = "0.15"
+git2 = "0.13.0"
