--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ repository = "https://github.com/conduit-rust/conduit-router"
 [dependencies]
 conduit = "0.9.0-alpha.5"
 route-recognizer = "0.3"
+tracing = "0.1.21"
 
 [dev-dependencies]
 conduit-test = "0.9.0-alpha.4"
+lazy_static = "1.4.0"
+tracing-subscriber = "0.2.14"
