Add an option to disable the requirement for email verification before publishing

--- a/.env.sample
+++ b/.env.sample
@@ -60,3 +60,7 @@ export GH_CLIENT_SECRET=
 # Credentials for connecting to the Sentry error reporting service.
 # export SENTRY_DSN_API=
 export SENTRY_ENV_API=local
+
+# If you don't require users to complete email verification before
+# they can publish a crate, uncomment this line.
+# export DISABLE_EMAIL_VERIFICATION_REQUIREMENT=1
