dev: support DEV_DOCKER env var and document usage

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,6 @@
+# Toggle for server configuration in development when using Docker. 
+export DEV_DOCKER=1
+
 # Location of the *postgres* database. For example, if you have created a
 # blank database locally named `cargo_registry`, this would be
 # `postgres://postgres@localhost/cargo_registry`.
