docker: Add health checks to all services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,10 @@ services:
       - 5432:5432
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: pg_isready -U postgres
+      interval: 5s
+      start_period: 30s
 
   backend:
     build:
@@ -36,6 +40,10 @@ services:
       - index:/app/tmp
       - cargo-cache:/usr/local/cargo/registry
       - target-cache:/app/target
+    healthcheck:
+      test: curl http://backend:8888/api/v1/site_metadata
+      interval: 5s
+      start_period: 300s
 
   frontend:
     build:
@@ -49,6 +57,10 @@ services:
     volumes:
       # Mount the app/ directory so live reload works
       - ./app:/app/app:ro
+    healthcheck:
+      test: wget http://frontend:4200/ -O /dev/null
+      interval: 5s
+      start_period: 120s
 
 volumes:
   postgres-data:
