docker: Extract shared `backend` YAML block

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,28 @@
 version: "3"
 
+x-backend: &backend
+  build:
+    context: .
+    dockerfile: backend.Dockerfile
+  environment:
+    DEV_DOCKER: "true"
+    DATABASE_URL: postgres://postgres:password@postgres/cargo_registry
+    SESSION_KEY: badkeyabcdefghijklmnopqrstuvwxyzabcdef
+    GIT_REPO_URL: file://./tmp/index-bare
+    GH_CLIENT_ID: ""
+    GH_CLIENT_SECRET: ""
+    WEB_ALLOWED_ORIGINS: http://localhost:8888,http://localhost:4200
+  links:
+    - postgres
+  volumes:
+    # Mount the src/ directory so we don't have to rebuild the Docker image
+    # when we want to change some code
+    - ./src:/app/src:ro
+
+    - index:/app/tmp
+    - cargo-cache:/usr/local/cargo/registry
+    - target-cache:/app/target
+
 services:
   postgres:
     image: postgres:9.6
@@ -17,29 +40,9 @@ services:
       start_period: 30s
 
   backend:
-    build:
-      context: .
-      dockerfile: backend.Dockerfile
-    environment:
-      DEV_DOCKER: "true"
-      DATABASE_URL: postgres://postgres:password@postgres/cargo_registry
-      SESSION_KEY: badkeyabcdefghijklmnopqrstuvwxyzabcdef
-      GIT_REPO_URL: file://./tmp/index-bare
-      GH_CLIENT_ID: ""
-      GH_CLIENT_SECRET: ""
-      WEB_ALLOWED_ORIGINS: http://localhost:8888,http://localhost:4200
-    links:
-      - postgres
+    <<: *backend
     ports:
       - 8888:8888
-    volumes:
-      # Mount the src/ directory so we don't have to rebuild the Docker image
-      # when we want to change some code
-      - ./src:/app/src:ro
-
-      - index:/app/tmp
-      - cargo-cache:/usr/local/cargo/registry
-      - target-cache:/app/target
     healthcheck:
       test: curl http://backend:8888/api/v1/site_metadata
       interval: 5s
