--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ conduit = "0.9.0-alpha.5"
 conduit-conditional-get = "0.9.0-alpha.3"
 conduit-cookie = "0.9.0-alpha.4"
 conduit-git-http-backend = "0.9.0-alpha.2"
-conduit-hyper = "=0.3.0-alpha.5.1"
+conduit-hyper = "0.3.0-alpha.6"
 conduit-middleware = "0.9.0-alpha.4"
 conduit-router = "0.9.0-alpha.3"
 conduit-static = "0.9.0-alpha.3"
@@ -63,7 +63,7 @@ handlebars = "3.0.1"
 hex = "0.4"
 htmlescape = "0.3.1"
 http = "0.2"
-hyper = "0.13"
+hyper = { version = "0.14", features = ["client", "http1"] }
 indexmap = "1.0.2"
 jemallocator = { version = "0.3", features = ['unprefixed_malloc_on_supported_platforms', 'profiling'] }
 lettre = { version = "0.10.0-alpha.1", default-features = false, features = ["file-transport", "smtp-transport", "native-tls", "hostname", "builder"] }
@@ -71,7 +71,7 @@ license-exprs = "^1.4"
 oauth2 = { version = "3.0.0", default-features = false, features = ["reqwest-010"] }
 parking_lot = "0.11"
 rand = "0.7"
-reqwest = { version = "0.10", features = ["blocking", "gzip", "json"] }
+reqwest = { version = "0.11", features = ["blocking", "gzip", "json"] }
 scheduled-thread-pool = "0.2.0"
 semver = { version = "0.10", features = ["diesel", "serde"] }
 sentry = "0.21.0"
@@ -81,7 +81,7 @@ sha2 = "0.9"
 swirl = { git = "https://github.com/sgrif/swirl.git", rev = "e87cf37" }
 tar = "0.4.16"
 tempfile = "3"
-tokio = { version = "0.2", default-features = false, features = ["net", "signal", "io-std"]}
+tokio = { version = "1", features = ["net", "signal", "io-std", "io-util", "rt-multi-thread"]}
 toml = "0.5"
 tracing = "0.1"
 tracing-subscriber = "0.2"
@@ -91,9 +91,9 @@ url = "2.1"
 claim = "0.4.0"
 conduit-test = "0.9.0-alpha.4"
 diesel_migrations = { version = "1.3.0", features = ["postgres"] }
-hyper-tls = "0.4"
+hyper-tls = "0.5"
 lazy_static = "1.0"
-tokio = { version = "0.2", default-features = false, features = ["stream"]}
+tokio = "1"
 tower-service = "0.3.0"
 
 [build-dependencies]
