--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ rustdoc-args = [
 ammonia = "3.0.0"
 anyhow = "1.0"
 base64 = "0.13"
+cargo-on-call = { path = "src/on_call" }
 cargo-registry-s3 = { path = "src/s3", version = "0.2.0" }
 chrono = { version = "0.4.0", features = ["serde"] }
 civet = "0.12.0-alpha.5"
