renovate: Change `yarn-deduplicate` strategy to `fewer`
This strategy is better at avoiding dependency version conflicts

--- a/renovate.json
+++ b/renovate.json
@@ -13,7 +13,7 @@
     "rust": {
         "enabled": false
     },
-    "postUpdateOptions": ["yarnDedupeHighest"],
+    "postUpdateOptions": ["yarnDedupeFewer"],
     "packageRules": [{
         "packageNames": ["ember-cli", "ember-data", "ember-source"],
         "separateMinorPatch": true
