--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "trailingComma": "all"
   },
   "dependencies": {
+    "@formatjs/intl-getcanonicallocales": "^1.5.3",
+    "@formatjs/intl-locale": "^2.4.11",
+    "@formatjs/intl-numberformat": "^6.1.1",
+    "@formatjs/intl-pluralrules": "^4.0.1",
     "@sentry/browser": "5.29.2",
     "@sentry/integrations": "5.29.2",
     "copy-text-to-clipboard": "2.2.0",
