--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ conduit = "0.9.0-alpha.3"
 conduit-conditional-get = "0.9.0-alpha.3"
 conduit-cookie = "0.9.0-alpha.4"
 conduit-git-http-backend = "0.9.0-alpha.2"
-conduit-hyper = "0.3.0-alpha.5"
+conduit-hyper = "=0.3.0-alpha.5"
 conduit-middleware = "0.9.0-alpha.3"
 conduit-router = "0.9.0-alpha.3"
 conduit-static = "0.9.0-alpha.3"
