--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "date-fns": "2.17.0",
     "fastboot-app-server": "3.0.0",
     "morgan": "1.10.0",
-    "pretty-bytes": "5.5.0"
+    "pretty-bytes": "5.5.0",
+    "semver": "7.3.4"
   },
   "devDependencies": {
     "@ember/optional-features": "2.0.0",
@@ -121,7 +122,6 @@
     "qunit": "2.13.0",
     "qunit-console-grouper": "0.3.0",
     "qunit-dom": "1.6.0",
-    "semver": "7.3.4",
     "timekeeper": "2.2.0"
   },
   "engines": {
