Switch to `actions/cache@main`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,14 +119,14 @@ jobs:
       #
       # Current size as of 2019-12-23: ~6 MB
       - name: Cache cargo binaries
-        uses: actions/cache@v2
+        uses: actions/cache@main
         with:
           path: ~/.cargo/bin
           key: ${{ runner.os }}-cargo-bin-${{ matrix.rust }}-${{ hashFiles('.diesel_version') }}-v2
 
       # Current size as of 2019-12-23: ~77 MB
       - name: Cache cargo registry cache
-        uses: actions/cache@v2
+        uses: actions/cache@main
         with:
           path: ~/.cargo/registry/cache
           key: ${{ runner.os }}-cargo-registry-cache-${{ matrix.rust }}-${{ hashFiles('**/Cargo.lock') }}
@@ -136,7 +136,7 @@ jobs:
 
       # Current size as of 2019-12-23: ~38 MB
       - name: Cache cargo registry index
-        uses: actions/cache@v2
+        uses: actions/cache@main
         with:
           path: ~/.cargo/registry/index
           key: ${{ runner.os }}-cargo-registry-index-${{ matrix.rust }}-${{ hashFiles('**/Cargo.lock') }}
@@ -146,7 +146,7 @@ jobs:
 
       # Current size as of 2019-12-23: ~4 MB
       - name: Cache cargo git db
-        uses: actions/cache@v2
+        uses: actions/cache@main
         with:
           path: ~/.cargo/git/db
           key: ${{ runner.os }}-cargo-git-db-${{ matrix.rust }}-${{ hashFiles('**/Cargo.lock') }}
@@ -176,7 +176,7 @@ jobs:
 
       # Current size as of 2019-12-23: ~336 MB
       - name: Cache cargo build
-        uses: actions/cache@v2
+        uses: actions/cache@main
         with:
           path: target
           key: ${{ runner.os }}-cargo-build-target-${{ steps.rustc.outputs.version }}-${{ hashFiles('**/Cargo.lock') }}
