Prep for semver bump and document current blocker
This (partially) reverts commit 0bcb7245caeffe159bafe069e0c60680a708a775.

This partially reverts the revert (#3051) of #2990. While we can't bump
the version yet, it is worth recovering these changes and documenting
the remaining work.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,7 +72,7 @@ parking_lot = "0.11"
 rand = "0.7"
 reqwest = { version = "0.11", features = ["blocking", "gzip", "json"] }
 scheduled-thread-pool = "0.2.0"
-semver = { version = "0.10", features = ["diesel", "serde"] }
+semver = { version = "0.10", features = ["diesel", "serde"] } # TODO: Bump to 0.11 after steveklabnik/semver#217 is resolved
 sentry = "0.22"
 serde = { version = "1.0.0", features = ["derive"] }
 serde_json = "1.0.0"
