--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-unicorn": "28.0.2",
     "loader.js": "4.7.0",
+    "match-json": "1.3.2",
     "normalize.css": "8.0.1",
     "nyc": "15.1.0",
     "postcss-nested": "4.2.3",
