--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ lettre = { version = "0.10.0-beta.3", default-features = false, features = ["fil
 license-exprs = "1.6"
 oauth2 = { version = "4.0.0-beta.1", default-features = false, features = ["reqwest"] }
 parking_lot = "0.11"
+prometheus = "0.12.0"
 rand = "0.8"
 reqwest = { version = "0.11", features = ["blocking", "gzip", "json"] }
 scheduled-thread-pool = "0.2.0"
