add optional expiration for rate limit overrides
Most of the cases when we increase the new crates publish rate limit
override is when a big monorepo needs to be published for the first
time, resulting in tens of crates being published at the same time. It's
extremely rare that the rate limit needs to be increased forever.

To avoid overrides being active forever, which could let to abuse if the
user accounts were compromised, this adds an optional expiration.

--- a/src/tasks/dump_db/dump-db.toml
+++ b/src/tasks/dump_db/dump-db.toml
@@ -144,6 +144,7 @@ last_refill = "private"
 [publish_rate_overrides.columns]
 user_id = "private"
 burst = "private"
+expires_at = "private"
 
 [readme_renderings.columns]
 version_id = "private"
