renovatebot: Limit noisy PRs for `webpack` and `@percy/cli` updates

--- a/renovate.json
+++ b/renovate.json
@@ -23,5 +23,8 @@
     "packageRules": [{
         "matchPackageNames": ["ember-cli", "ember-data", "ember-source"],
         "separateMinorPatch": true
+    }, {
+        "matchPackageNames": ["@percy/cli", "webpack"],
+        "extends": ["schedule:weekly"]
     }]
 }
