renovatebot: Add `A-frontend` label to JS dep updates

--- a/renovate.json
+++ b/renovate.json
@@ -13,6 +13,7 @@
     "js": {
         "assignees": ["locks", "pichfl", "Turbo87"],
         "assigneesSampleSize": 1,
+        "labels": ["A-frontend"],
         "reviewers": ["locks", "pichfl", "Turbo87"],
         "reviewersSampleSize": 1
     },
